changed map added a socket

--- a/views/Map/index.ejs
+++ b/views/Map/index.ejs
@@ -252,7 +252,7 @@
       });
     
       // Add a custom image as the map
-      var imageUrl = '../images/map.png'; // Adjust the path to your image
+      var imageUrl = '../images/map2.png'; // Adjust the path to your image
       var imageBounds = [[0, 0], [height, width]]; // Adjust the bounds of your image (height and width)
       L.imageOverlay(imageUrl, imageBounds).addTo(map);
     
